✅ Added Folia support